crates/tribute-front/tests/snapshots/ufcs_method_call__snapshot_ufcs_chained_multi_arg.snap
---
source: crates/tribute-front/tests/ufcs_method_call.rs
expression: ir_text
---
core.module @test {
  !Pair = adt.struct<{fields = [[@x, core.i32], [@y, core.i32]], name = @Pair}>
  !Triple = adt.struct<{fields = [[@x, core.i32], [@y, core.i32], [@z, core.i32]], name = @Triple}>
  !Triple_1 = adt.typeref<{name = @Triple}>
  !t0 = tribute_control.func_sig<(!Triple_1) -> core.i32, {tribute.calling_convention = 0}>
  !Pair_1 = adt.typeref<{name = @Pair}>
  !t1 = tribute_control.func_sig<(!Pair_1) -> core.i32, {tribute.calling_convention = 0}>

  tribute_control.func @"Pair::x"(%0: !Pair_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !Pair} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Pair::y"(%0: !Pair_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 1, type = !Pair} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::x"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::y"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 1, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::z"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 2, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Pair::extend"(%0: !Pair_1, %1: core.i32) -> !Triple_1 convention(direct) {
      %2 = tribute_control.call %0 {callee = @"Pair::x"} : core.i32
      %3 = tribute_control.call %0 {callee = @"Pair::y"} : core.i32
      %4 = adt.struct_new %2, %3, %1 {type = !Triple} : !Triple_1
      tribute_control.return %4
  }
  tribute_control.func @"Nat::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @"Triple::sum"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = tribute_control.call %0 {callee = @"Triple::x"} : core.i32
      %2 = tribute_control.call %0 {callee = @"Triple::y"} : core.i32
      %3 = tribute_control.call %1, %2 {callee = @"Nat::+"} : core.i32
      %4 = tribute_control.call %0 {callee = @"Triple::z"} : core.i32
      %5 = tribute_control.call %3, %4 {callee = @"Nat::+"} : core.i32
      tribute_control.return %5
  }
  tribute_control.func @test(%0: !Pair_1) -> core.i32 convention(direct) {
      %1 = arith.const {value = 3} : core.i32
      %2 = tribute_control.call %0, %1 {callee = @"Pair::extend"} : !Triple_1
      %3 = tribute_control.call %2 {callee = @"Triple::sum"} : core.i32
      tribute_control.return %3
  }
}
