crates/tribute-front/tests/snapshots/ufcs_method_call__snapshot_ufcs_single_extra_arg.snap
---
source: crates/tribute-front/tests/ufcs_method_call.rs
expression: ir_text
---
core.module @test {
  !Pair = adt.struct<@Pair(@x: core.i32, @y: core.i32)>
  !Triple = adt.struct<@Triple(@x: core.i32, @y: core.i32, @z: core.i32)>
  !Triple_1 = adt.typeref<{name = @Triple}>
  !Pair_1 = adt.typeref<{name = @Pair}>
  !t0 = tribute_control.func_sig<(!Triple_1) -> core.i32, {tribute.calling_convention = 0}>
  !t1 = tribute_control.func_sig<(!Pair_1) -> core.i32, {tribute.calling_convention = 0}>

  tribute_control.func @"Pair::x"(%0: !Pair_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !Pair} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Pair::y"(%0: !Pair_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 1, type = !Pair} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::x"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::y"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 1, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Triple::z"(%0: !Triple_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 2, type = !Triple} : core.i32
      tribute_control.return %1
  }
  tribute_control.func @"Pair::extend"(%0: !Pair_1, %1: core.i32) -> !Triple_1 convention(direct) {
      %2 = tribute_control.call %0 {callee = @"Pair::x"} : core.i32
      %3 = tribute_control.call %0 {callee = @"Pair::y"} : core.i32
      %4 = adt.struct_new %2, %3, %1 {type = !Triple} : !Triple_1
      tribute_control.return %4
  }
  tribute_control.func @test(%0: !Pair_1) -> !Triple_1 convention(direct) {
      %1 = arith.const {value = 3} : core.i32
      %2 = tribute_control.call %0, %1 {callee = @"Pair::extend"} : !Triple_1
      tribute_control.return %2
  }
}
